# noopt

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: aapl.json  add_columns.csv  chains.json  chains_df.csv  expirationchain.json  quotes.json  symbols.txt
src/: analysis.py  auth.py  client.py  config.py  data_api.py  data_schemas.py  logging_config.json  models.py  my_logger.py  parser.py  schwab.py  trader_api.py  trader_enums.py  trader_schemas.py
src/api/: data_enums.py  data_schemas.py  trader_enums.py  trader_schemas.py
src/noopt/: config.py  main.py  parser.py
src/noopt/api/: data_api.py  data_enums.py  data_schemas.py  shared_api.py  shared_enums.py  trader_api.py  trader_enums.py  trader_schemas.py
